--------------------------------------------------------------------------------
skipik 23.02.2023 13:50:41 +0300 - build 6107

1. SQLite v3.41.0.

--------------------------------------------------------------------------------
drkns 2023-02-22 20:47:28+00:00 - build 6106

1. Refactoring.

--------------------------------------------------------------------------------
zg 2023-02-22 00:19:12+02:00 - build 6105

1. Correction of 5822.2 for persistent blocks.

--------------------------------------------------------------------------------
zg 2023-02-21 20:49:15+02:00 - build 6104

1. experimental: new event SE_FOLDERCHANGED, sent when changing the current directory in panels.

--------------------------------------------------------------------------------
MZK 2023-02-18 12:03:13-08:00

1. gh-614: Restored Viewer type-to-search feature which was removed in 6099.
   Now it is implemented as a macro, see View.TypeToSearch.lua.
   Thanks to all for the discussion and prototyping.

· · · · · · · · · · · · · · · · · · · · · · · · ·

1. gh-614: Восстановил функциональность Просмотрщика печатать-чтобы-искать,
   которая была удалена в 6099. Теперь это делается при помощи макроса,
   см. View.TypeToSearch.lua. Спасибо всем за обсуждение и прототипирование.

--------------------------------------------------------------------------------
drkns 2023-02-14 21:56:31+00:00 - build 6103

1. A few fixes.

--------------------------------------------------------------------------------
drkns 2023-02-12 00:38:45+00:00 - build 6102

1. Refactoring.

2. More tests.

3. Warnings.

--------------------------------------------------------------------------------
drkns 2023-02-06 22:08:52+00:00 - build 6101

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2023-02-05 13:01:34+00:00 - build 6100

1. gh-483: Do not update panel curdir too early. Experimental.

2. Refactoring.

3. More logging.
